# onnxruntime-bazel

./: BUILD.bazel  MODULE.bazel  README.md  bazel-bin  bazel-onnxruntime-bazel  bazel-out  bazel-testlogs
