load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "onnxruntime",
    deps = select({
        "@platforms//cpu:x86_64": ["@archive_onnxruntime_x86_64//:onnxruntime_lib_linux-x64"],
        "@platforms//cpu:aarch64": ["@archive_onnxruntime_aarch64//:onnxruntime_lib_linux-aarch64"],
    }),
    visibility = ["//visibility:public"],
)
